[gd_scene load_steps=3 format=3 uid="uid://c13dqf1pfcj0l"]

[ext_resource type="Script" path="res://ui.gd" id="1_nb1vi"]
[ext_resource type="Texture2D" uid="uid://8syxicchssd6" path="res://assets/space background.png" id="2_ajk1x"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_nb1vi")

[node name="TurnTimer" type="Timer" parent="."]

[node name="Tallies" type="Label" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -11.5
offset_right = 40.0
offset_bottom = 11.5
grow_vertical = 2
theme_override_font_sizes/font_size = 32

[node name="TurnCounterTexture" type="TextureRect" parent="."]
offset_left = 434.0
offset_top = -48.0
offset_right = 694.0
offset_bottom = 176.0
texture = ExtResource("2_ajk1x")
expand_mode = 2

[node name="TurnCountdown" type="Label" parent="TurnCounterTexture"]
light_mask = 2
visibility_layer = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 0.227
anchor_top = 0.286
anchor_right = 0.723
anchor_bottom = 0.679
offset_left = -0.0200034
offset_top = -0.064003
offset_right = 0.0199871
offset_bottom = -0.0960045
grow_horizontal = 2
theme_override_font_sizes/font_size = 64
text = "0:00"
horizontal_alignment = 1

[node name="ButtonTexture" type="TextureRect" parent="."]
offset_left = 836.0
offset_top = 427.0
offset_right = 1166.0
offset_bottom = 683.0
texture = ExtResource("2_ajk1x")
expand_mode = 2

[node name="Button" type="Button" parent="ButtonTexture"]
light_mask = 2
visibility_layer = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 0.84
anchor_top = 0.836
anchor_right = 0.967
anchor_bottom = 0.918
offset_left = -186.2
offset_top = -108.016
offset_right = -82.11
offset_bottom = -76.008
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 32
text = "End Turn"

[connection signal="pressed" from="ButtonTexture/Button" to="." method="_on_button_pressed"]
